@@ -1,3 +1,13 @@
+** v2.34, 23.04.2017**
+* Fix an error in UIButtons. #54
+* Updates various Skins.
+* Update BigWigs profile.
+* Add a notification toast frame.
+* Add an own CoolDownFlash Frame. Based on DoomCooldownPulse
+* Locales updates.
+* Update CombatText and put it in an own module.
+* Many functions are updated.
+
 ** v2.33, 10.04.2017**
 * Create an UIButton Frame. Ported from Shadow&Light.
 * Remove the achievement tooltip function, its now blizzard default.
